--- a/html/appointa/index.html
+++ b/html/appointa/index.html
@@ -2,27 +2,27 @@
 <html lang="en">
 <!--Head-->
 <head>
+  <!-- Security Headers -->
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Basic Metadata -->
+  <meta http-equiv="X-Content-Type-Options" content="nosniff">
+
+
+  <!-- Security Headers -->
+
   <link rel="canonical" href="https://vickywang.me/appointa">
-
-  <title>
-    Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study
-  </title>
-  <meta name="title" content="Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study">
-  <meta name="author" content="Vicky W.">
+  <title>Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study</title>
   <meta name="description" content="Discover Vicky Wang&#39;s innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.">
-
+  <meta name="author" content="Vicky W.">
 
   
-  
+
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
   <meta property="og:title" content="Efficient Interview Scheduling Solution for Recruiters | Vicky Wang UX Case Study">
-  <meta property="og:" content="Discover Vicky Wang&#39;s innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.">
+  <meta property="og:description" content="Discover Vicky Wang&#39;s innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.">
   <meta property="og:url" content="https://vickywang.me/appointa">
   <meta property="og:site_name" content="Vicky's Website">
   <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/https://vickywang.me/projectImages/Cover_APPOINTA.png">
@@ -34,64 +34,43 @@
   <meta property="twitter:description" content="Discover Vicky Wang&#39;s innovative UX case study on streamlining interview scheduling for recruiters, hiring managers, and candidates.">
   <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/https://vickywang.me/projectImages/Cover_APPOINTA.png">
 
-  <!-- favicon -->
-
+  <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
 
-
-  <!-- =================== FONT Starts====================== -->
-
-
+ <!-- =================== FONT Starts====================== -->
   <!-- Google Font Preconnect-->
-
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
   <!-- Google Font Preconnect-->
-
-  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&amp;display=swap" rel="stylesheet">
   <!--sitewide font-family: 'Lato', sans-serif; -->
-
-
-  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&amp;family=Caveat:wght@400;500;600;700&amp;display=swap" rel="stylesheet">
   <!--handwriting -  font-family: 'Caveat', sans-serif; -->
   <!--handwriting -  font-family: 'Caveat Brush', sans-serif; -->
-
-  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&amp;display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
-
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
-
   <!-- =================== FONT Ends====================== -->
 
+  <!-- External JS and CSS -->
+  <script async src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js"></script>
+  <script async src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script async src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>   <!-- AOS -->
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script> <!-- AOS -->
 
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.1.1/crypto-js.min.js" integrity="sha512-E8QSvWZ0eCLGk4km3hxSsNmGWbLtSCSUcewDQPQWZF6pEU8GlT8a5fF32wOl1i8ftdMhssTrF/OhyGWwonTcXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-  <!-- crypto js -->
-  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <!--jQuery-->
-
-  <!--aos-->
-  <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-
-
-
+  <!-- Your CSS and JS -->
   <link rel="stylesheet" href="/main.css">
-  <script type="text/javascript" src="/scripts.js"></script>
+  <script defer src="/scripts.js"></script>
 
-
-
-
-
+  <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
   <script>
     window.dataLayer = window.dataLayer || [];
 
@@ -99,10 +78,10 @@
       dataLayer.push(arguments);
     }
     gtag('js', new Date());
-
     gtag('config', 'G-E8YXDWJST2');
   </script>
-  <!-- google analytics-->
+
+  <!-- PostHog Analytics -->
   <script>
     ! function(t, e) {
       var o, n, p, r;
@@ -129,31 +108,7 @@
   </script>
 
   <!-- posthog analytics-->
-  <!-- Meta Pixel Code -->
-  <script>
-    ! function(f, b, e, v, n, t, s) {
-      if (f.fbq) return;
-      n = f.fbq = function() {
-        n.callMethod ?
-          n.callMethod.apply(n, arguments) : n.queue.push(arguments)
-      };
-      if (!f._fbq) f._fbq = n;
-      n.push = n;
-      n.loaded = !0;
-      n.version = '2.0';
-      n.queue = [];
-      t = b.createElement(e);
-      t.async = !0;
-      t.src = v;
-      s = b.getElementsByTagName(e)[0];
-      s.parentNode.insertBefore(t, s)
-    }(window, document, 'script',
-      'https://connect.facebook.net/en_US/fbevents.js');
-    fbq('init', '167714757489154');
-    fbq('track', 'PageView');
-  </script>
-  <noscript><img height="1" width="1" style="display:none" src="https://www.facebook.com/tr?id=167714757489154&ev=PageView&noscript=1" /></noscript>
-  <!-- End Meta Pixel Code -->
+
 
 
 </head>
