--- a/html/index.html
+++ b/html/index.html
@@ -55,6 +55,11 @@
   <!--handwriting font-family: 'Indie Flower'; -->
   <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Gloria Hallelujah';  | Hello font|-->
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
+
+
   <!-- =================== FONT Ends====================== -->
 
   <!-- External JS and CSS -->
@@ -291,13 +296,13 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Business Scheduling, Onboarding, Subscription </h1>
+              <h1 class="TextPoppins fontWeight100 Grey800"> Business Scheduling, Onboarding, Subscription </h1>
             </div>
           </div>
         </div>
       </div>
 
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
 
       <div class="wrapper">
 
@@ -407,17 +412,17 @@
         <div class="blankHS"></div>
         <hr class="wrapperM">
         <div class="blankHS"></div>
-
         <div class="wrapper">
           <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
               <div class="element">
-                <h1 class="specialTextL fontWeight100"> Mobile Consumer-Facing Booking Experience </h1>
+                <h1 class="TextPoppins fontWeight100 Grey800"> Mobile Consumer-Facing Booking Experience </h1>
               </div>
             </div>
           </div>
         </div>
-        <div class="blankHXS"></div>
+
+        <div class="blankHXXS"></div>
         <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
           <div class="Grid-cell main">
             <div class="element">
@@ -476,12 +481,12 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Simplify SaaS Booking App </h1>
+              <h1 class="TextPoppins fontWeight100 Grey800"> Simplify SaaS Booking App </h1>
             </div>
           </div>
         </div>
       </div>
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
       <div class="wrapper">
         <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
           <div class="Grid-cell main">
@@ -536,14 +541,14 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Consumer-Facing Medication Purchase Experience
+              <h1 class="TextPoppins fontWeight100 Grey800"> Consumer-Facing Medication Purchase Experience
 
               </h1>
             </div>
           </div>
         </div>
       </div>
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
       <div class="wrapper">
 
         <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
@@ -647,12 +652,12 @@
         <div class="Grid Grid--full Grid--gutters u-textCenter">
           <div class="Grid-cell">
             <div class="element">
-              <h1 class="specialTextL fontWeight100"> Healthcare Admin Panel Design </h1>
+              <h1 class="TextPoppins fontWeight100 Grey800"> Healthcare Admin Panel Design </h1>
             </div>
           </div>
         </div>
       </div>
-      <div class="blankHXS"></div>
+      <div class="blankHXXS"></div>
       <div class="wrapper">
 
         <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
