--- a/html/index.html
+++ b/html/index.html
@@ -1204,7 +1204,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Design System</h3>
-                    <h4>Design & Maintenance
+                    <h4>Design & Update
                     </h4>
 
                   </div>
@@ -1217,7 +1217,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Deployed on AWS S3</h3>
-                    <h4>Implementation & Update</h4>
+                    <h4>Implementation & Maintenance </h4>
 
                   </div>
                 </div>
@@ -1330,7 +1330,8 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">UC Berkeley</h3>
                     <h6 class="TextPoppins textItalic">2015 &#8211; 2019, Full-time</h6>
-                    <h4>Master of architecture</h4>
+                    <h4><a href="/architecture" class="textUnderline">Master of Architecture</a> </h4>
+                    
                   </div>
                 </div>
               </div>
