--- a/html/index.html
+++ b/html/index.html
@@ -1112,7 +1112,7 @@
         <div class="Grid-cell">
           <div class="element">
             <h1 class="TextPoppins fontWeight100 Grey800"> Experience Design </h1>
-            <h5 class="TextPoppins textItalic fontWeight100">2021 - Present</h5>
+            <h5 class="TextPoppins textItalic fontWeight200">2021 - Present</h5>
 
           </div>
         </div>
@@ -1190,7 +1190,7 @@
         <div class="Grid-cell">
           <div class="element">
             <h1 class="TextPoppins fontWeight100 Grey800"> Web Design & Implementation </h1>
-            <h5 class="TextPoppins textItalic fontWeight100">2020 - Present</h5>
+            <h5 class="TextPoppins textItalic fontWeight200">2020 - Present</h5>
           </div>
         </div>
       </div>
@@ -1252,7 +1252,7 @@
           <div class="element">
             <h1 class="TextPoppins fontWeight100 Grey800"> Architectural Design
             </h1>
-            <h5 class="TextPoppins textItalic fontWeight100">2010 - 2018</h5>
+            <h5 class="TextPoppins textItalic fontWeight200">2010 - 2018</h5>
 
           </div>
         </div>
@@ -1270,8 +1270,8 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Architectural Designer</h3>
                     <h6 class="TextPoppins textItalic">2017 &#8211; 2018</h6>
-                    <h6 class="TextPoppins textItalic">Full-time &#64; Buro OS </h6>
-                    <h4>Concept & Visual Design</h4>
+                    <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; <a href="https://buro-os.com/" class="textUnderline">Buro OS</a></h6>
+                    <h6>Concept & Visual Design</h6>
                   </div>
                 </div>
               </div>
@@ -1283,7 +1283,7 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Design Intern</h3>
                     <h6 class="TextPoppins textItalic">2017</h6>
-                    <h6 class="TextPoppins textItalic">Full-time @ In Design Studio </h6>
+                    <h6 class="TextPoppins textItalic fontWeight400">Full-time @ In Design Studio </h6>
                   </div>
                 </div>
               </div>
@@ -1296,9 +1296,9 @@
                     <h3 class="page__job-name fontWeight400">Architectural Designer
                     </h3>
                     <h6 class="TextPoppins textItalic">2013 &#8211; 2015</h6>
-                    <h6 class="TextPoppins textItalic">Full-time @ PDI Design Group</h6>
-                    <h4>Schematic Design
-                    </h4>
+                    <h6 class="TextPoppins textItalic fontWeight400">Full-time @ <a href="http://www.pdidg.com/" class="textUnderline"> PDI Design Group </a> </h6>
+                    <h6>Schematic Design
+                    </h6>
                   </div>
                 </div>
               </div>
@@ -1311,9 +1311,9 @@
                     <h3 class="page__job-name fontWeight400">Design Intern
                     </h3>
                     <h6 class="TextPoppins textItalic">2010 &#8211; 2012</h6>
-                    <h6 class="TextPoppins textItalic">Part-time @ Do Union</h6>
-                    <h4>Concept & Visualization
-                    </h4>
+                    <h6 class="TextPoppins textItalic fontWeight400">Part-time @ <a href="http://chengdapeng.art/" class="textUnderline"> Do Union </a></h6>
+                    <h6>Concept & Visualization
+                    </h6>
                   </div>
                 </div>
               </div>
@@ -1331,7 +1331,8 @@
           <div class="element">
             <h1 class="TextPoppins fontWeight100 Grey800"> Education & Professional Development
             </h1>
-            2009 - Present
+            
+            <h5 class="TextPoppins textItalic fontWeight200">2009 - Present</h5>
           </div>
         </div>
       </div>
@@ -1348,9 +1349,9 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Udemy</h3>
-                    <h6 class="TextPoppins textItalic">2024, Online Class</h6>
-                    <h4>The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript Course</a>: </h4>
-                    <h4>From Zero to Expert </h4>
+                    <h6 class="TextPoppins textItalic fontWeight400">2024, Online Class</h6>
+                    <h6>The Complete <a href="/javascript-learning/" class="textUnderline">JavaScript Course</a> </h6>
+                    <h6>From Zero to Expert </h6>
 
          
                   </div>
@@ -1363,7 +1364,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Codecademy</h3>
-                    <h6 class="TextPoppins textItalic">2022 &#8211; 2023, Online Class</h6>
+                    <h6 class="TextPoppins textItalic fontWeight400">2022 &#8211; 2023, Online Class</h6>
                     <ul>
                       <li>○ Learn User Research: Generative </li>
                       <li>○ Learn Design Thinking: Ideation </li>
@@ -1384,7 +1385,7 @@
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Google UX Design Professional Certificate
                     </h3>
-                    <h6 class="TextPoppins textItalic">2021, Online Class</h6>
+                    <h6 class="TextPoppins textItalic fontWeight400">2021, Online Class</h6>
                   </div>
                 </div>
               </div>
@@ -1394,9 +1395,13 @@
               <div class="uia-timeline__point uia-card">
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
-                    <h3 class="page__job-name fontWeight400">UC Berkeley</h3>
-                    <h6 class="TextPoppins textItalic">2015 &#8211; 2019, Full-time</h6>
-                    <h4><a href="/architecture" class="textUnderline">Master of Architecture</a> </h4>
+                    <h3 class="page__job-name fontWeight400"><a href="https://www.berkeley.edu/" class="textUnderline">UC Berkeley</a> &#160; <a href="https://ced.berkeley.edu/" class="textUnderline">CED</a></h3>
+                    <h6 class="TextPoppins textItalic fontWeight400">2015 &#8211; 2017, Full-time</h6>
+                    <h6 class="TextPoppins textItalic fontWeight400">2017 &#8211; 2019, Full-time</h6>
+                    <h6><a href="/architecture" class="textUnderline">Master of Architecture</a> </h6>
+                    <h6>3-year program</h6>
+
+
                   </div>
                 </div>
               </div>
@@ -1407,8 +1412,8 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Beijing Uni. of Tech </h3>
-                    <h6 class="TextPoppins textItalic">2009 - 2013, Full-time</h6>
-                    <h4>Art & Design</h4>
+                    <h6 class="TextPoppins textItalic fontWeight400">2009 - 2013, Full-time</h6>
+                    <h6>Art & Design</h6>
                   </div>
                 </div>
               </div>
@@ -1449,7 +1454,7 @@
                     <h3 class="page__job-name fontWeight400"><a href="/photography" class="textUnderline">Photography</a> </h3>
 
                     <h6 class="TextPoppins textItalic">2017 - Present, Part-time</h6>
-                    <h4>Nature & Wildlife</h4>
+                    <h6>Nature & Wildlife</h6>
 
                   </div>
                 </div>
