--- a/html/index.html
+++ b/html/index.html
@@ -1204,7 +1204,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Web Design</h3>
-                    <h4>Responsive Web Design</h4>
+                    <h5>Responsive Web Design</h5>
 
                   </div>
                 </div>
@@ -1216,7 +1216,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400"><a href="/design_system/" class="textUnderline">Design System</a> </h3>
-                    <h4>Reusable & Scalable Components</h4>
+                    <h5>Reusable & Scalable Components</h5>
 
                   </div>
                 </div>
@@ -1228,9 +1228,8 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Deployed on AWS S3</h3>
-                    <h4>Build from Scratch </h4>
-                    <h4><a href="https://github.com/vicky-wyq" class="textUnderline">By Using HTML, CSS, JavaScript, EJS </a> </h4>
-
+                    <h5>Build from Scratch </h5>
+                    <h5><a href="https://github.com/vicky-wyq" class="textUnderline">HTML, CSS, JavaScript, EJS </a> </h5>
 
                   </div>
                 </div>
