--- a/html/index.html
+++ b/html/index.html
@@ -345,7 +345,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
+              <a href="/byp_b2b_booking"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -399,7 +399,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_subscription/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
+              <a href="/byp_b2b_subscription/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -463,7 +463,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_booking"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
+              <a href="/byp_b2b_booking"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -524,7 +524,7 @@
 
             </div>
             <div class="element">
-              <a href="/byp_b2b_SaaS/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
+              <a href="/byp_b2b_SaaS/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -587,7 +587,7 @@
 
             </div>
             <div class="element">
-              <a href="/savings_calculator/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
+              <a href="/savings_calculator/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -634,7 +634,7 @@
 
             </div>
             <div class="element">
-              <a href="/refining_rx_zero/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
+              <a href="/refining_rx_zero/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -699,7 +699,7 @@
 
             </div>
             <div class="element">
-              <a href="/admin_panel/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Project
+              <a href="/admin_panel/"> <button class="buttonSmall buttonPrimary bgVWGrey">View project
                 </button></a>
             </div>
           </div>
@@ -880,7 +880,7 @@
 
             </div>
             <div class="element">
-              <a href="/design_system/"> <button class="buttonLarge buttonPrimary bgVWGrey">View Design System
+              <a href="/design_system/"> <button class="buttonSmall buttonPrimary bgVWGrey">View design system
                 </button></a>
             </div>
           </div>
@@ -980,7 +980,7 @@
           <div class="row centerVer">
             <div class="element">
 
-              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonLarge buttonPrimary bgVWGrey">Email me
+              <a href="mailto:vickyw.design@gmail.com"> <button class="buttonSmall buttonPrimary bgVWGrey">Email me
                 </button></a>
 
             </div>
