responsive grid and spacing

--- a/html/index.html
+++ b/html/index.html
@@ -306,7 +306,7 @@
 
       <div class="wrapper">
 
-        <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -351,7 +351,7 @@
           </div>
         </div>
         <div class="blankHS"></div>
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -421,7 +421,7 @@
         </div>
 
         <div class="blankHXXS"></div>
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -486,7 +486,7 @@
       </div>
       <div class="blankHXXS"></div>
       <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -549,7 +549,7 @@
       <div class="blankHXXS"></div>
       <div class="wrapper">
 
-        <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -593,7 +593,7 @@
           </div>
         </div>
         <div class="blankHS"></div>
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -658,7 +658,7 @@
       <div class="blankHXXS"></div>
       <div class="wrapper">
 
-        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
@@ -841,7 +841,7 @@
 
       <div class="blankHXXS"></div>
       <div class="wrapper">
-        <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+        <div class="Grid Grid--holly-grail Grid--center">
           <div class="Grid-cell main">
             <div class="element">
 
