--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="">
 <!--Head-->
 <head>
   <!-- Security Headers -->
@@ -483,102 +483,6 @@
             </div>
           </div>
 
-          
-
-<div class="wrapper">
-  <div class="Grid Grid--full Grid--gutters">
-    <div class="Grid-cell">
-      <div class="element">
-        <div class='filed'>
-          <div class="tab-container">
-            <div class="tabs">
-              <input type="radio" class="select-EJS" name="neutralShades" id="neutralShadesT1" >
-              <label for="neutralShadesT1" class="tab">EJS</label>
-              <input type="radio" class="select-HTML" name="neutralShades" id="neutralShadesT2" >
-              <label for="neutralShadesT2" class="tab">HTML</label>
-              <input type="radio" class="select-CSS" name="neutralShades" id="neutralShadesT3" checked>
-              <label for="neutralShadesT3" class="tab">CSS</label>
-            </div>
-            <button class="copy-btn" style="display:inline;">Copy Code</button>
-          </div>
-          <div class="ejs-block code-block">
-            <pre class="ejs-code"><code></code></pre>
-          </div>
-          <div class="html-block code-block" style="display:none;">
-            <pre class="html-code"><code></code></pre>
-          </div>
-          <div class="css-block code-block" style="display:none;">
-            <pre class="css-code"><code>                 /* ===== color grey ===== */
-                 .Grey900 {
-                    color: var(--Grey900);
-                }
-                .Grey800 {
-                    color: var(--Grey800);
-                }
-                .Grey700 {
-                    color: var(--Grey700);
-                }
-                .Grey600 {
-                    color: var(--Grey600);
-                }
-                .Grey500 {
-                    color: var(--Grey500);
-                }
-                .Grey400 {
-                    color: var(--Grey400);
-                }
-                .Grey300 {
-                    color: var(--Grey300);
-                }
-                .Grey200 {
-                    color: var(--Grey200);
-                }
-                .Grey100 {
-                    color: var(--Grey100);
-                }
-              /* ===== color grey ===== */
-              /* ===== bg color grey ===== */
-                .GreyBg900 {
-                    background: var(--Grey900);
-                }
-                .GreyBg800 {
-                    background: var(--Grey800);
-                }
-                .GreyBg700 {
-                    background: var(--Grey700);
-                }
-                .GreyBg600 {
-                    background: var(--Grey600);
-                }
-                .GreyBg500 {
-                    background: var(--Grey500);
-                }
-                .GreyBg400 {
-                    background: var(--Grey400);
-                }
-                .GreyBg300 {
-                    background: var(--Grey300);
-                }
-                .GreyBg200 {
-                    background: var(--Grey200);
-                }
-                .GreyBg100 {
-                    background: var(--Grey100);
-                }
-                .WhiteBg {
-                    background-color: var(--white);
-                
-                }
-                .WhiteBgTrans {
-                    background-color: var(--White-transparent);
-                }
-              /* ===== bg color grey ===== */</code></pre>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
 
 
 
