landing page content update

--- a/html/architecture/LACAMA/index.html
+++ b/html/architecture/LACAMA/index.html
@@ -84,6 +84,7 @@
     gtag('js', new Date());
     gtag('config', 'G-E8YXDWJST2');
   </script>
+  <!-- Google Analytics -->
 
   <!-- PostHog Analytics -->
   <script>
