--- a/html/architecture/manifold_ground/index.html
+++ b/html/architecture/manifold_ground/index.html
@@ -86,6 +86,7 @@
     gtag('js', new Date());
     gtag('config', 'G-E8YXDWJST2');
   </script>
+  <!-- Google Analytics -->
 
   <!-- PostHog Analytics -->
   <script>
