--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -84,6 +84,7 @@
     gtag('js', new Date());
     gtag('config', 'G-E8YXDWJST2');
   </script>
+  <!-- Google Analytics -->
 
   <!-- PostHog Analytics -->
   <script>
