--- a/html/index.html
+++ b/html/index.html
@@ -1166,14 +1166,14 @@
   
                     <h4 class="fontWeight400 colorYellowVW700">Business SaaS Booking App</h4>
                     <ul>
-                      <li>&#9675; Pet service booking system .
+                      <li>&#9675; Pet service booking system
                       </li>
                       <li>&#9675; Operations management tool </li>
                     </ul>
 
                     <h4 class="fontWeight400 colorYellowVW700">Consumer Booking Mobile App </h4>
                     <ul>
-                      <li>&#9675; Pet Service Booking & Payment </li>
+                      <li>&#9675; Booking & Payment </li>
                     </ul>
                   </div>
                 </div>
@@ -1187,10 +1187,10 @@
                     <h3 class="page__job-name fontWeight400">Product Designer</h3>
                     <h6 class="TextPoppins textItalic">2023 – 2024</h6>
                     <h6 class="TextPoppins textItalic">Part-time &#64; LASO Health</h6>
-                    <h4 class="fontWeight400 colorYellowVW700">Selling Prescription Medications</h4>
+                    <h4 class="fontWeight400 colorYellowVW700">Prescription Medication Sales</h4>
                     <ul>
-                      <li>&#9675; Marketing Web Page Research</li>
-                      <li>&#9675; Super Admin Panel for User Management</li>
+                      <li>&#9675; UX research for marketing web pages</li>
+                      <li>&#9675; Super Admin panel for effective user management</li>
                     </ul>
 
                   </div>
@@ -1241,7 +1241,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Web Design</h3>
-                    <h5>Responsive Web Design</h5>
+                    <h5>&#9675; Responsive Web Design</h5>
 
                   </div>
                 </div>
@@ -1253,7 +1253,7 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400"><a href="/design_system/" class="textUnderline">Design System</a> </h3>
-                    <h5>Reusable & Scalable Components</h5>
+                    <h5>&#9675; Reusable & Scalable Components</h5>
 
                   </div>
                 </div>
@@ -1265,8 +1265,8 @@
                 <div class="uia-card__container">
                   <div class="uia-card__intro">
                     <h3 class="page__job-name fontWeight400">Deployed on AWS S3</h3>
-                    <h5>Build from Scratch </h5>
-                    <h5><a href="https://github.com/vicky-wyq" class="textUnderline">HTML, CSS, JavaScript, EJS </a> </h5>
+                    <h5>&#9675; Build from Scratch </h5>
+                    <h5><a href="https://github.com/vicky-wyq" class="textUnderline">&#9675; HTML, CSS, JavaScript, EJS </a> </h5>
 
                   </div>
                 </div>
@@ -1305,7 +1305,7 @@
                     <h3 class="page__job-name fontWeight400">Architectural Designer</h3>
                     <h6 class="TextPoppins textItalic">2017 &#8211; 2018</h6>
                     <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; <a href="https://buro-os.com/" class="textUnderline">Buro OS</a></h6>
-                    <h6>Concept & Visual Design</h6>
+                    <h6>&#9675; Concept & Visual Design</h6>
                   </div>
                 </div>
               </div>
@@ -1318,6 +1318,8 @@
                     <h3 class="page__job-name fontWeight400">Design Intern</h3>
                     <h6 class="TextPoppins textItalic">2017</h6>
                     <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; In Design Studio </h6>
+                    <h6>&#9675; Building elevation, section, details documents
+                    </h6>
                   </div>
                 </div>
               </div>
@@ -1331,7 +1333,7 @@
                     </h3>
                     <h6 class="TextPoppins textItalic">2013 &#8211; 2015</h6>
                     <h6 class="TextPoppins textItalic fontWeight400">Full-time &#64; <a href="http://www.pdidg.com/" class="textUnderline"> PDI Design Group </a> </h6>
-                    <h6>Schematic Design
+                    <h6>&#9675; Schematic Design
                     </h6>
                   </div>
                 </div>
@@ -1346,7 +1348,7 @@
                     </h3>
                     <h6 class="TextPoppins textItalic">2010 &#8211; 2012</h6>
                     <h6 class="TextPoppins textItalic fontWeight400">Part-time &#64; <a href="http://chengdapeng.art/" class="textUnderline"> Do Union </a></h6>
-                    <h6>Concept & Visualization
+                    <h6>&#9675; Concept & Visualization
                     </h6>
                   </div>
                 </div>
