--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -11,8 +11,8 @@
   <!-- Security Headers -->
 
   <link rel="canonical" href="https://vickywang.me/photography">
-  <title>Nature &amp; Wildlife Photographic Artistry by Vicky Wang</title>
-  <meta name="description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <title>Nature &amp; Wildlife by Vicky Wang</title>
+  <meta name="description" content="Capturing the beauty of nature">
   <meta name="author" content="Vicky W.">
 
   
@@ -20,18 +20,18 @@
   <!-- Open Graph / Facebook -->
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Nature &amp; Wildlife Photographic Artistry by Vicky Wang">
-  <meta property="og:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
+  <meta property="og:title" content="Nature &amp; Wildlife by Vicky Wang">
+  <meta property="og:description" content="Capturing the beauty of nature">
   <meta property="og:url" content="https://vickywang.me/photography">
   <meta property="og:site_name" content="Vicky's Website">
-  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  <meta property="og:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/./medium_default_wood_reflection.jpg">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://vickywang.me/photography">
-  <meta property="twitter:title" content="Nature &amp; Wildlife Photographic Artistry by Vicky Wang">
-  <meta property="twitter:description" content="Vicky W. specializes in UX Design for B2B SaaS and consumer apps, expertly transforming complex challenges into user-friendly solutions.">
-  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/vickywang_web.png">
+  <meta property="twitter:title" content="Nature &amp; Wildlife by Vicky Wang">
+  <meta property="twitter:description" content="Capturing the beauty of nature">
+  <meta property="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/Thumbnails/./medium_default_wood_reflection.jpg">
 
   <!-- Favicon -->
   <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
@@ -176,7 +176,7 @@
   <div class="Grid Grid--full Grid--gutters">
     <div class="Grid-cell">
       <div class="element">
-        <p class="t-hello">👋🏻 hi there!, </p>
+        <p class="t-hello">👋🏻 Hey there, welcome!</p>
       </div>
     </div>
   </div>
@@ -206,7 +206,7 @@
             <strong>
               <div class="intro aos-init aos-animate" data-aos="fade-up">
                 
-                <h1> Welcome to my photography journey, where I aim to capture the natural world in all its beauty and complexity.
+                <h1> I love capturing the beauty of nature. 
 
  </h1>
                 
@@ -259,7 +259,7 @@
     <div class="Grid Grid--full Grid--gutters">
         <div class="Grid-cell">
             <div class="element">
-                <h3>Through my lens, I seek to share the breathtaking landscapes and intricate details that make nature so captivating. Each photograph tells a story, inviting you to see the wonders of the world from a fresh perspective. This passion for exploration and storytelling drives me to connect others with the remarkable moments I find in nature.</h3>
+                <h3>—its breathtaking landscapes and all the little details that make it amazing. Every photo tells a story and invites you to see the world in a new way. I’m excited to share these moments with you!</h3>
             </div>
         </div>
     </div>
