--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -1561,7 +1561,7 @@
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
-              <h5 class="Grey700"> &#169; 2024 &#8212; vickywang.me | All rights reserved.</h5>
+              <h5 class="Grey700"> &#169; 2020 - 2025 &#8212; vickywang.me | Shaping seamless digital experiences.</h5>
             </div>
           </div>
         </div>
