--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7377,7 +7377,7 @@ strong {
         <div class="Grid-cell">
           <div class="footerBorder">
             <div class="element">
-              <h5 class="Grey700"> &#169; 2024 &#8212; vickywang.me | All rights reserved.</h5>
+              <h5 class="Grey700"> &#169; 2020 - 2025 &#8212; vickywang.me | Shaping seamless digital experiences.</h5>
             </div>
           </div>
         </div>
