--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -140,12 +140,13 @@
 <header>
   <nav class="header WhiteBgTrans" id="header">
     <div class="headerContainer">
-      <a href="/" class="marginS centerVer pointer Grid--center">
+      <a class="row marginS" href="javascript:void(0);" onclick="history.back(); return false;">
         <div class="arrow-container moveBackArrow">
           <div class="left-arrow "></div>
-       </div>
-       <h4 class="backText ">Back</h4>
+        </div>
+        <h4 class="backText ">Back</h4>
       </a>
+      
       <div class="navbar">
         <a href="/"><img class="pointer widthXXS marginS" src="/icon/LOGOtxtOnly.svg" alt="VW" title="vickywang.me"></a>
 
