--- a/html/index.html
+++ b/html/index.html
@@ -177,14 +177,15 @@
     <div class="Grid Grid--full Grid--gutter u-textCenter">
       <div class="Grid-cell">
         <div class="element">
-          <h1 class="t-hello">👋🏻 hello, I'm Vicky, a UX Designer</h1>
+          <h1 class="t-hello">👋🏻 hello, I'm Vicky</h1>
           <div class="blankHTiny"></div>
 
-          <h1 class="specialTextTitle fontWeight700">Passionate about creating</h1>
-          <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText">simple, smooth, engaging</h1>
-          <h1 class="specialTextTitle fontWeight700">experiences</h1>
+          <h1 class="specialTextTitle fontWeight700">Designing UX that’s </h1>
+          <h1 class="specialTextTitle fontWeight700 displayTablet colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700 displayPhone colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700 typing-demo colorLandingText"> smooth, intuitive, impactful</h1>
+          <h1 class="specialTextTitle fontWeight700">for users & businesses.</h1>
+
 
           </h1>
         </div>
@@ -219,17 +220,13 @@
         </a>
       </div>
 
-      <div class="Grid-cell centerVH">
-        <a href="https://github.com/vicky-wyq" target="_blank" title="GitHub">
-          <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/git.svg" alt="GitHub">
-        </a>
-      </div>
+
       <div class="Grid-cell centerVH">
         <a href="https://codepen.io/vicky-wyq" target="_blank" title="CodePen">
           <img class="iconM hoverWhite paddingM fitContentax borderRadiusMax" src="./icon/Codepen.svg" alt="CodePen">
         </a>
       </div>
-      <div class="Grid-cell centerVH displayLaptop">
+      <div class="Grid-cell centerVH">
         <div class="dropdownSM">
           <img title="Share" class="iconM hoverWhite paddingM fitContent borderRadiusMax dropbtn" src="/icon/share.svg" alt="Share">
           <div class="dropdownSM-content">
